# prct01CC

./: .gitignore  CMakeLists.txt  README.md
include/: automata.h  filereader.h  loadingbelt.h  stack.h  state.h  statefactory.h  statetransition.h  statetransitioner.h  statetransitions.h  symbolstack.h
src/: automata.cc  filereader.cc  loadingbelt.cc  main.cc  stack.cc  state.cc  statefactory.cc  statetransition.cc  statetransitioner.cc  symbolstack.cc
